# RDMATrafficGen

./: CMakeLists.txt  Makefile  README.md  reset.sh  run_evaluation.sh  shutdown.sh
analysis/: EVAL_os2.md  FINAL_Solar_OS1_100-400-0.2_600-40_30s_2Conn_StaticRPC.md  FINAL_Solar_OS2_100-400-0.2_600-40_30s_2Conn_StaticRPC.md  analysis.py  plotting.py
config/: config
src/: common.hpp  macro.hpp  rdma_client.cpp  rdma_client_esg.cpp  rdma_server.cpp  rdma_simple.cpp
utils/: customrand.h  readerwriterqueue.h
utils/workloads/: DCTCP2010.txt  Uniform10KB.txt  Uniform10MB.txt  Uniform143.txt  Uniform24387.txt  Uniform32KB.txt  Uniform64KB.txt  Uniform66KB.txt  Uniform9KB.txt
